tests/NormalTests/paczka1/fuzzy1/19077588.err
Error in line 12: uHYHTRAXeG A729 28,3
Error in line 16: uHYHTRAXeG S227 50,9
Error in line 28: UNplgRi S682 40,4
Error in line 34: UNplgRi A729 90,6
Error in line 36: GMZsfj53N A729 22,9
Error in line 38: GMZsfj53N S682 34,3
